WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262765
text-combine-upright should ignore letter-spacing
https://bugs.webkit.org/show_bug.cgi?id=262765
Summary
text-combine-upright should ignore letter-spacing
fantasai
Reported
2023-10-05 22:38:27 PDT
Per CSS Writing Modes <
https://www.w3.org/TR/css-writing-modes-3/#text-combine-layout
>:
> the glyphs of the combined text are bidi-isolated and composed horizontally (ignoring letter-spacing and any forced line breaks, but using the specified font settings)
WebKit is applying letter-spacing, but shouldn't.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-05 22:38:39 PDT
<
rdar://problem/116562622
>
Ahmad Saleem
Comment 2
2025-12-12 00:01:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55298
EWS
Comment 3
2026-01-05 11:50:01 PST
Committed
305116@main
(1aeae88f4b97): <
https://commits.webkit.org/305116@main
> Reviewed commits have been landed. Closing PR #55298 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug