text-combine-upright should ignore letter-spacing https://bugs.webkit.org/show_bug.cgi?id=262765 rdar://problem/116562622

Reviewed by Vitor Roriz and Alan Baradlay.

This patch aligns WebKit with Web Specification [1]:

"the glyphs of the combined text are bidi-isolated and composed horizontally
(ignoring letter-spacing and any forced line breaks, but using the specified
font settings)"

[1] https://drafts.csswg.org/css-writing-modes-3/#text-combine-layout

This patch fixes it by setting letter spacing to ignore.

* Source/WebCore/rendering/RenderCombineText.cpp:
(WebCore::RenderCombineText::combineTextIfNeeded):
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-combine-upright-letter-spacing-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-combine-upright-letter-spacing-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-combine-upright-letter-spacing-001.html: Added.

Canonical link: https://commits.webkit.org/305116@main